Changed the z-index for the jquerydatetimepicker drop-down so sweet alert appears before it, issue #776

--- a/css/less/skin.less
+++ b/css/less/skin.less
@@ -3422,4 +3422,8 @@ nav.navbar{
   }
 }
 
+.xdsoft_datetimepicker {
+    z-index: 1999;
+}
+
 
